syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.saga.grpc.proto";
option java_outer_classname = "InventoryProto";

service Inventory {
  rpc CheckInventory (CheckInventoryRequest) returns (CheckInventoryResponse) {
  }
}

message CheckInventoryRequest {
  string productId = 1;
}

message CheckInventoryResponse {
  string data = 1;
}